--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,32 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.shadow-effect {
+  box-shadow: 0 0 2px rgba(95, 74, 46, 0.075), 0 2px 3px rgba(95, 74, 46, 0.043),
+    0 4px 6px rgba(95, 74, 46, 0.043), 0 20px 32px -12px rgba(95, 74, 46, 0.122);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.shadow-effect-button {
+  box-shadow: 0 1px 2px rgba(209, 205, 200, 0.5),
+    0 3px 3px rgba(209, 205, 200, 0.3), 0 -2px #f0f0ef inset, 0 0 0 1px #f0f0ef;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.shadow-effect-tabs {
+  box-shadow: 0 0 0 1px rgba(227, 225, 222, 0.6),
+    0 1px 2px rgba(95, 74, 46, 0.08), 0 4px 6px rgba(95, 74, 46, 0.08),
+    0 12px 16px rgba(104, 75, 37, 0.06);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.shadow-effect-editor {
+  box-shadow: 0 0 0 1px rgba(227, 225, 222, 0.4),
+    0 1px 2px rgba(95, 74, 46, 0.075), 0 4px 6px rgba(95, 74, 46, 0.043),
+    0 40px 40px -24px rgba(104, 75, 37, 0.075);
+}
+
+.shadow-effect-editor-button {
+  box-shadow: 0 1px 1px rgba(45, 32, 17, 0.12),
+              0 1.50259px 3px rgba(45, 32, 17, 0.2),
+              0 4px 8px rgba(45, 32, 17, 0.2),
+              0 12px 24px -6px rgba(45, 32, 17, 0.3),
+              0 -2px #000000bf inset;
+}
+
+.shadow-effect-card {
+  box-shadow: 0 1px 2px rgba(95, 74, 46, 0.075),
+              0 4px 6px rgba(95, 74, 46, 0.043),
+              0 24px 40px -16px rgba(104, 75, 37, 0.075);
+}
+
+
+
+.section-header-center {
+  text-align: center;
+}
+
+.section-header,
+.section-header-title,
+.section-header-description {
+  max-width: -moz-max-content;
+  max-width: max-content;
+  width: 100%;
+}
+
+.section-header {
+  @apply flex flex-col;
+  z-index: 1;
+  position: relative;
 }
