--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,3 +66,10 @@
               0 1px #d6cfc21f inset;
   color: #fbfaf9;
 }
+
+.corousel-shadow {
+  box-shadow: 0 0 0 1px #ebe7e0,
+                0 1px 2px #d1cdc752,
+                0 3px 4px #d1cdc73d,
+                0 -3px #f0f0efcc inset;
+}
