--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,3 +65,17 @@
   box-shadow: 0 0 0 1px #ebe7e0, 0 1px 2px #d1cdc752, 0 3px 4px #d1cdc73d,
     0 -3px #f0f0efcc inset;
 }
+.hero-heading {
+  font-size: 64px; /* Adjust based on your design requirements */
+  line-height: 1.2; /* Increase line height */
+  text-align: center;
+  vertical-align: middle;
+  margin: 0 auto; /* Center horizontally */
+}
+
+.hero-subtext {
+  font-size: 18px; /* Adjust based on your design requirements */
+  line-height: 1.4;
+  text-align: center;
+  margin-top: 20px; /* Space between heading and subtext */
+}
