--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,3 +59,16 @@
       @apply bg-background text-foreground;
     }
   }
+
+  .containers {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 8px/* 32px */;
+    padding-left: 8px/* 32px */;
+}
+@media (min-width: 1400px) {
+    .containers {
+        max-width: 1500px;
+    }
+}
