--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,3 +72,82 @@
         max-width: 1500px;
     }
 }
+
+
+.shadow-effect {
+  box-shadow: 0 0 2px rgba(95, 74, 46, 0.075), 0 2px 3px rgba(95, 74, 46, 0.043),
+    0 4px 6px rgba(95, 74, 46, 0.043), 0 20px 32px -12px rgba(95, 74, 46, 0.122);
+}
+
+.shadow-effect-button {
+  box-shadow: 0 1px 2px rgba(209, 205, 200, 0.5),
+    0 3px 3px rgba(209, 205, 200, 0.3), 0 -2px #f0f0ef inset, 0 0 0 1px #f0f0ef;
+}
+
+.shadow-effect-tabs {
+  box-shadow: 0 0 0 1px rgba(227, 225, 222, 0.6),
+    0 1px 2px rgba(95, 74, 46, 0.08), 0 4px 6px rgba(95, 74, 46, 0.08),
+    0 12px 16px rgba(104, 75, 37, 0.06);
+}
+
+.shadow-effect-editor {
+  box-shadow: 0 0 0 1px rgba(227, 225, 222, 0.4),
+    0 1px 2px rgba(95, 74, 46, 0.075), 0 4px 6px rgba(95, 74, 46, 0.043),
+    0 40px 40px -24px rgba(104, 75, 37, 0.075);
+}
+
+.shadow-effect-editor-button {
+  box-shadow: 0 1px 1px rgba(45, 32, 17, 0.12),
+    0 1.50259px 3px rgba(45, 32, 17, 0.2), 0 4px 8px rgba(45, 32, 17, 0.2),
+    0 12px 24px -6px rgba(45, 32, 17, 0.3), 0 -2px #000000bf inset;
+}
+
+.shadow-effect-card {
+  box-shadow: 0 1px 2px rgba(95, 74, 46, 0.075),
+    0 4px 6px rgba(95, 74, 46, 0.043),
+    0 24px 40px -16px rgba(104, 75, 37, 0.075);
+}
+
+.section-header-center {
+  text-align: center;
+}
+
+.section-header,
+.section-header-title,
+.section-header-description {
+  max-width: -moz-max-content;
+  max-width: max-content;
+  width: 100%;
+}
+
+.section-header {
+  @apply flex flex-col;
+  z-index: 1;
+  position: relative;
+}
+
+.badge {
+  background: hsl(20, 7%, 20%);
+  box-shadow: 0 1px 2px rgba(12, 9, 8, 0.32), 0 3px 3px rgba(12, 9, 8, 0.1),
+    0 1px #d6cfc21f inset;
+  color: #fbfaf9;
+}
+
+.corousel-shadow {
+  box-shadow: 0 0 0 1px #ebe7e0, 0 1px 2px #d1cdc752, 0 3px 4px #d1cdc73d,
+    0 -3px #f0f0efcc inset;
+}
+.hero-heading {
+  font-size: 64px; /* Adjust based on your design requirements */
+  line-height: 1.2; /* Increase line height */
+  text-align: center;
+  vertical-align: middle;
+  margin: 0 auto; /* Center horizontally */
+}
+
+.hero-subtext {
+  font-size: 18px; /* Adjust based on your design requirements */
+  line-height: 1.4;
+  text-align: center;
+  margin-top: 20px; /* Space between heading and subtext */
+}
